refactor: consolidate project structure, downgrade to JDK 17, add monitoring dashboard, and improve TabBar UX
- Moved UI from vantage-admin/vantage-ui/ to root vantage-ui/
- Consolidated vantage-framework/ into vantage-admin/src/main/java/com/pd/framework/
- Moved all controllers to vantage-admin/src/main/java/com/pd/gateway/
- Downgraded from Java 25 to Java 17 (fixed switch patterns and List.getFirst())
- Added custom Monitoring Dashboard with actuator integration
- Improved TabBar with native scrolling and animated refresh button
- Updated README with JDK 17 requirements, UI dev setup, and new features
- Removed unused script files and cleaned up project structure